<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/Registrarse"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/edt_nombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/edt_correoRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/UsuarioCorreo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/edt_passwordRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:hint="@string/UsuarioContraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/btn_registroAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/border_radius"
        android:foregroundGravity="fill"
        android:hapticFeedbackEnabled="false"
        android:text="Aceptar"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

</LinearLayout>